--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  google_fonts: ^6.1.0
+  google_fonts: 6.1.0
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
@@ -26,15 +26,14 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   page_transition: ^2.1.0
   dartz: ^0.10.1
-  another_flushbar: ^1.12.30
   cupertino_icons: ^1.0.2
   getwidget: ^4.0.0
   get_it: ^7.6.4
   flutter_native_splash: ^2.3.9
-  google_sign_in: ^6.2.1
   gap: ^3.0.1
   dotted_border: ^2.1.0
   fluttertoast: ^8.2.4
+  sqflite: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +44,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/logo/
   #   - images/a_dot_ham.jpeg
