--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dotted_border: ^2.1.0
   fluttertoast: ^8.2.4
   sqflite: ^2.3.2
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
